service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydjangoapp-service
spec:
  selector:
    app: mydjangoapp
  ports:
  - protocol: TCP
    port: 80  # External port
    targetPort: 8000  # Internal port (matches containerPort in deployment.yaml)
  type: NodePort
